= RSpec Changelog

== Version 1.0

* Applied [#10920] Added support for not implemented examples (Patch from Chad Humphries)
* Patch to allow not implemented examples.  This works by not providing a block to the example. (Patch from Chad Humphries, Ken Barker)
* Yanked support for Rails 1.1.6 in Spec::Rails
* RSpec.tmbundle uses CMD-SHIFT-R to run focused examples now.
* Spec::Rails now bundles a spec:rcov task by default (suggestion from Kurt Schrader)
* Fixed [#10814] Runner loads shared code, test cases require them again
* Fixed [#10753] Global before and after
* Fixed [#10774] Allow before and after to be specified in config II
* Refactored Spec::Ui examples to use new global before and after blocks.
* Added instructions about how to get Selenium working with Spec::Ui (spec_ui/examples/selenium/README.txt)
* Fixed [#10805] selenium.rb missing from gem?
* Added rdocs explaining how to deal with errors in Rails' controller actions
* Applied [#10770] Finer grained includes.
* Fixed [#10747] Helper methods defined in shared specs are not visible when shared spec is used
* Fixed [#10748] Shared descriptions in separate files causes 'already exists' error
* Applied [#10698] Running with --drb executes specs twice (patch from Ruy Asan)

== Version 0.9.4
This release introduces massive improvements to Spec::Ui - the user interface functional testing
extension to RSpec. There are also some minor bug fixes to the RSpec core.

* Massive improvements to Spec::Ui. Complete support for all Watir's ie.xxx(how, what) methods. Inline screenshots and HTML.
* Reactivated --timeout, which had mysteriously been deactivated in a recent release.
* Fixed [#10669] Kernel#describe override does not cover Kernel#context
* Applied [#10636] Added spec for OptionParser in Runner (Patch from Scott Taylor)
* Added [#10516] should_include should be able to accept multiple items
* Applied [#10631] redirect_to matcher doesn't respect request.host (Patch from Tim Lucas)