@@ -2,6 +2,7 @@
 
 == Version 1.0
 
+* Applied [#10921] Allow verify_rcov to accept greater than threshold coverage %'s via configuration
 * Applied [#10920] Added support for not implemented examples (Patch from Chad Humphries)
 * Patch to allow not implemented examples.  This works by not providing a block to the example. (Patch from Chad Humphries, Ken Barker)
 * Yanked support for Rails 1.1.6 in Spec::Rails
